# beeai-framework-workshop

./: README.md  pyproject.toml
src/: llms.py  tools.py  workflow.py
src/agents/: agents.py  multi_agent.py  problem_a.py  problem_b.py  problem_c.py  workflow.py
