[project]
name = "beaai-framework-workshop"
version = "0.0.1"
description = ""
authors = [{name = "Tomas Dvorak",email = "toomas2d@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "beeai-framework[wikipedia] (>=0.1.25,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "*", from="src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"

